# analytics-webstatscollector

./: .gitignore  .gitmodules  .gitreview  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  big-entry-1.txt  binary-segfault-search  build.sh  collector.c  config.h  configure  configure.ac  debianize.sh  exclude  export.c  export.h  filter.c  filter.sh  generate-test-data.pl  prepare-release  test.sh  webstats-collector.upstart.conf
debian/: README.debian  changelog  control  copyright  dirs  files  links  postinst  rules
src/: collector.c  collector.h  export.c  export.h  filter.c  filter.h  filter.sh
tests/: Makefile  README.tests  entries-with-urls-with-spaces-2013-02-10.txt  entry-internal-not-proxied.txt  entry-internal-proxied.txt  entry-line1.txt  simulate.py  test.sh
tests/collector-tests/0001-Simple line/: expected.pagecounts  expected.projectcounts  input
tests/collector-tests/0002-Simple project/: expected.pagecounts  expected.projectcounts  input
tests/collector-tests/0003-Multiple simple projects/: expected.pagecounts  expected.projectcounts  input
